Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28473

field_ref_zero is not initialized in xtrabackup_prepare_func()

    XMLWordPrintable

Details

    Description

      The bug is caused by 82d5994520c239da1b6edf1b24e08138ae0c753d(MDEV-26110), as field_ref_zero is initialized only for xtrabackup_backup_func(), but not for xtrabackup_prepare_func().

      The bug can be repeated with the following change to an existing test:

      diff --git a/mysql-test/suite/mariabackup/incremental_backup.test b/mysql-test/suite/mariabackup/incremental_backup.test
      index 88e277fd95a..eb3f769f9a2 100644
      --- a/mysql-test/suite/mariabackup/incremental_backup.test
      +++ b/mysql-test/suite/mariabackup/incremental_backup.test
      @@ -1,5 +1,5 @@
       --source include/have_aria.inc
      ---source include/innodb_page_size.inc
      +--source include/innodb_page_size_small.inc
       
       # see suite.pm "check for exact values, in case the default changes to be small everywhere"
       if (`select @@max_binlog_stmt_cache_size = 4294963200 and @@innodb_page_size = 65536`) {
      @@ -12,7 +12,7 @@ let basedir=$MYSQLTEST_VARDIR/tmp/backup;
       let incremental_dir=$MYSQLTEST_VARDIR/tmp/backup_inc1;
       
       CREATE TABLE t_aria(i INT) ENGINE ARIA;
      -CREATE TABLE t(i INT PRIMARY KEY) ENGINE INNODB;
      +CREATE TABLE t(i INT PRIMARY KEY) ENGINE INNODB ROW_FORMAT=COMPRESSED;
       BEGIN;
       INSERT INTO t VALUES(2);
       connect (con1,localhost,root,,);
      

      The suggested fix is to move field_ref_zero allocation/deallocation from xtrabackup_backup_func() to it's caller main_low().

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              vlad.lesin Vladislav Lesin (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 5.5h
                  1d 5.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.