MDEV-28473 field_ref_zero is not initialized in xtrabackup_prepare_func()

The solution is to initialize field_ref_zero in main_low() before
xtrabackup_backup_func() and xtrabackup_prepare_func() calls.